# spirit

./: .gitignore  Cargo.toml  Configuration.md  LICENSE  README.md  Rocket.toml  install.sh  install_docker.sh  justfile
.github/workflows/: rust.yml
ae/compute_node/: 1.init.sh  2.init_after_reboot.sh  3.setup_memdev.sh
ae/memory_node/: .gitignore  1.init.sh  2.init_after_reboot.sh  3.run_notebook.sh  spirit_ae.ipynb
bench-mc-client/: Cargo.toml  Dockerfile
bench-mc-client/src/: benchmark.rs  main.rs  metrics.rs
global-enforcer/: Cargo.toml
global-enforcer/src/: global_allocation.rs  main.rs
lib/: Cargo.toml
lib/src/: commands.rs  lib.rs  libcache_loader.rs  process_requests.rs
local-enforcer/: Cargo.toml
local-enforcer/scripts/: clean_up_enforcers.sh  collect_cont_logs.py  perf_collect_cdf_disagg.sh  perf_measurement.sh  reset_social_net.sh  run_clients.py  run_dlrm_inf_docker.sh  run_dynamic_docker.sh  run_memcached_kvs_docker.sh  run_res_alloc.sh  run_res_alloc_move_logs.sh  run_res_alloc_others.sh  run_stream_docker.sh  run_with_timeout.sh  set_aggregated_blk_io.sh  setup_cpus.sh  terminate_spirit_containers.sh  test_memcached_docker.py  transition_dynamic_cont.sh
local-enforcer/src/: cache_client.rs  main.rs
remote_mem/: config.cloudlab
remote_mem/drivers/mind_ram/: .gitignore  Makefile  mind_ram_drv.h  mind_ram_drv_rdma.c  mind_ram_drv_rdma.h  mind_ram_drv_worker.c  mind_ram_rdma_ftns.c  mind_ram_rdma_worker.c
remote_mem/scripts/: 1a.setup_mind_swap_only.sh  2a.remove_swap_only.sh  2b.remove_mind_ram_only.sh  setup_io_limit.sh  setup_mind_ram.sh
res_allocation/: .gitignore  Dockerfile  Makefile  README.md  communication.py  config.json  deployer.py  docker_init.sh  draw_perf.py  main_memcached.py  main_move_logs.py  metrics_reset_server.py  requirements.txt  resource_monitor.py
res_allocation/allocators/: __init__.py  allocator_base.py  fij_trade_allocator.py  inc_trade_allocator.py  oracle_allocator.py  ptas_algorithm.py  spirit_allocator.py  static_allocator.py
res_allocation/configs/1app/: config_1.25g_1.9gbps_30sec_bal.json  config_1.25g_3.8gbps_30sec_bal.json  config_1.25g_5.6gbps_30sec_bal.json  config_1.25g_7.5gbps_30sec_bal.json  config_10g_1.9gbps_30sec_bal.json  config_10g_3.8gbps_30sec_bal.json  config_10g_5.6gbps_30sec_bal.json  config_10g_7.5gbps_30sec_bal.json  config_2.5g_1.9gbps_30sec_bal.json  config_2.5g_3.8gbps_30sec_bal.json  config_2.5g_5.6gbps_30sec_bal.json  config_2.5g_7.5gbps_30sec_bal.json  config_5g_1.9gbps_30sec_bal.json  config_5g_3.8gbps_30sec_bal.json  config_5g_5.6gbps_30sec_bal.json  config_5g_7.5gbps_30sec_bal.json  (+4 more)
res_allocation/estimators/: data_loader.py  estimator.py  runtime_estimator.py
res_allocation/utils/: config.py  helpers.py  log_parsers.py  logger.py  logtools.py  plotting.py
sample_configs/: global_2_apps.json  global_4_apps.json  global_6_apps_1vm.json  global_6_apps_2vm.json  global_6_apps_4vm.json  local_2_apps_no_mrc_vm0.json  local_2_apps_vm0.json  local_4_apps_dynamic_vm0.json  local_4_apps_dynamic_vm0_p1.json  local_4_apps_dynamic_vm0_p2.json  local_4_apps_dynamic_vm0_p3.json  local_4_apps_dynamic_vm0_p4.json  local_6_apps_bal_no_mrc_vm0.json  local_6_apps_bal_no_mrc_vm1.json  local_6_apps_bal_no_mrc_vm2.json  local_6_apps_bal_no_mrc_vm3.json  local_6_apps_bal_vm0.json  local_6_apps_bal_vm1.json  local_6_apps_bal_vm2.json  local_6_apps_bal_vm3.json  local_dlrm_inf_vm0.json  local_mc_kvs_vm0.json  local_social_net_vm0.json  local_stream_vm0.json
sample_configs/meta_kvs/: local_meta.json
sample_configs/meta_kvs2/: local_meta.json
sample_configs/meta_kvs3/: local_meta.json
sample_configs/meta_kvs4/: local_meta.json
sample_configs/meta_kvs_dyn1/: local_meta.json
sample_configs/meta_kvs_dyn2/: local_meta.json
sample_configs/meta_kvs_dyn3/: local_meta.json
sample_configs/meta_kvs_dyn4/: local_meta.json
scripts/: get_all_container_memuse.py
scripts/disagg/: .gitignore  download_metakvs.sh  justfile  run_eval_1app.sh  run_eval_2apps.sh  run_eval_2apps_int_test.sh  run_eval_2apps_others.sh  run_eval_2apps_static.sh  run_eval_4apps_dyn.sh  run_eval_6apps.sh
scripts/disagg/apps/memcached_bench/: Cargo.toml
scripts/disagg/apps/memcached_bench/data/: example.csv  example2.csv
scripts/disagg/apps/memcached_bench/src/: main.rs
trace_loader/: Cargo.toml  build.rs  license
trace_loader/src/: lib.rs
(+59 files in other folders)
