[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "local-enforcer",
  "global-enforcer",
  "lib",
  "trace_loader",
  "bench-mc-client",
]
resolver = "2"

[workspace.dependencies]
serde = "1.0.130"
serde_json = "1.0.68"
dotenv = "0.15.0"
rand = "0.8.4"
reqwest = "0.11.22"
redis = { version = "0.25.3", features = [ "aio", "tokio-comp"]}
futures = "0.3.30"
rayon = "1.10.0"

[workspace.dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

## Apply some optimizations to test dependencies in debug/test builds

[profile.dev]
strip = true
debug = 0
# opt-level = 0
# debug = 1

# Generally optimize dependencies a little
[profile.dev.package."*"]
opt-level = 1
strip = true
debug = 0

# The default release profile without LTO.
[profile.release]
debug = 1
# Disable LTO to decrease the linking time.
lto = "off"
incremental = true

# The release profile with LTO.
# CI uses this profile. To run it locally, add `--profile=release-lto` to `cargo build` or `cargo
# test`.
[profile.release-lto]
inherits = "release"
# Enable "thin" LTO to optimize performance.
lto = "thin"

## LTO doesn't work with careful
## explicitly specifying features in case releases features change
[profile.careful]
debug = 1
inherits = "release"
lto = "off"
incremental = true
