[package]
name = "bench-mc-client"
version.workspace = true
edition.workspace = true

[dependencies]
lib = { version = "0.1.0", path = "../lib" }
reqwest = { workspace = true, features = ["json", "stream"] }
tokio = { version = "1.34.0", features = ["full", "macros", "tracing"] }
indicatif = "0.17"
futures = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
clap = "4.5"
rocket = "0.5.0"
hashbrown = "0.14.3"
chrono = "0.4"
async-memcached = "0.4"
core_affinity = "0.8"
