[package]
name = "global-enforcer"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
dotenv = { workspace = true }
rand = { workspace = true }
rocket = { workspace = true, features = ["json"] }
reqwest = { workspace = true, features = ["json"] }
lib = { version = "0.1.0", path = "../lib" }
tokio = { version = "1.34.0", features = ["full", "macros"] }
futures = "0.3"
linked-hash-map = "0.5.6"
plotters = "0.3.5"
chrono = "0.4"
