[package]
name = "lib"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
redis = { workspace = true }
rand = { workspace = true }
rocket = { workspace = true, features = ["json"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.108"
indicatif = "0.15.0"
tokio = { version = "1.34.0", features = ["full", "macros"] }
bincode = "1.3.3"
futures = { workspace = true }
rayon = { workspace = true }
trace_loader ={ path = "../trace_loader/" }
net2 = "0.2"