[package]
name = "memcached_bench"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memcache = "0.17.2"
csv = "1.1"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
glob = "0.3"
clap = "2.32"
indicatif = "0.17"